--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+<resources>>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="clGrey">#6D6D80</color>
-    <color name="clRed">#FF3466</color>
-    <color name="clWhite">#FFECECEC</color>
-    <color name="transparentWhite">#BFECECEC</color>
-    <color name="borderColor">#636375</color>
-    <color name="textActorsWhite">#D8D8D8</color>
-    <color name="colorPrimary">#FF191926</color>
-    <color name="colorPrimaryDark">#FFC107</color>
-    <color name="colorAccent">#222232</color>
-    <color name="activityBackground">#673AB7</color>
+    <color name="grey">#6D6D80</color>
+    <color name="red">#FF3466</color>
+    <color name="soft_white">#FFECECEC</color>
+    <color name="transparent_white">#BFECECEC</color>
+    <color name="cardview_border">#636375</color>
+    <color name="actor_name">#D8D8D8</color>
+    <color name="color_primary">#FF191926</color>
+    <color name="color_primary_dark">#FFC107</color>
+    <color name="color_accent">#222232</color>
     <color name="transparent">#00FFFFFF</color>
 </resources>
