--- a/app/src/main/res/drawable/gradient_back_poster.xml
+++ b/app/src/main/res/drawable/gradient_back_poster.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient android:angle="270"
-        android:endColor="@color/colorPrimary"
+        android:endColor="@color/color_primary"
         android:startColor="@android:color/transparent"/>
 </shape>
