--- a/app/src/main/res/layout/item_actor.xml
+++ b/app/src/main/res/layout/item_actor.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="4dp"
-    android:layout_marginEnd="4dp">
+    style="@style/ItemActorRoot">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ActorPhoto"
-        android:layout_width="@dimen/actorSize"
+        android:layout_width="@dimen/actor_photo_size"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="1:1"
@@ -22,12 +21,9 @@
         android:id="@+id/ActorName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="viewStart"
-        android:textColor="@color/textActorsWhite"
-        android:textSize="12sp"
-        android:textStyle="bold"
+        style="@style/ItemActorActorName"
         app:layout_constraintEnd_toEndOf="@+id/ActorPhoto"
         app:layout_constraintStart_toStartOf="@+id/ActorPhoto"
         app:layout_constraintTop_toBottomOf="@+id/ActorPhoto"
-        tools:text="TextViewkjh jkhb kjhbk jhbk hbk jhbk jhbk jhbk jbh jk" />
+        tools:text="@string/ItemActorActorNameToolsText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
