--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="leftMarginStar">3dp</dimen>
-    <dimen name="actorSize">80dp</dimen>
-    <dimen name="margin_8dp">8dp</dimen>
-    <dimen name="marginBottomDetailREcycler">8dp</dimen>
-    <dimen name="marginTopDetailRecycler">7dp</dimen>
-    <dimen name="detailOverviewSpaceExtra">6sp</dimen>
-    <dimen name="detailOverviewTop">4dp</dimen>
-    <dimen name="sizeViewAge">24dp</dimen>
-    <dimen name="likeSize">16dp</dimen>
-    <dimen name="marginForLike">13dp</dimen>
+    <dimen name="actor_photo_size">80dp</dimen>
+    <dimen name="all_margin_8dp">8dp</dimen>
+    <dimen name="rv_actors_margin_all">8dp</dimen>
+    <dimen name="detail_overview_space_extra">6sp</dimen>
+    <dimen name="detail_overview_margin_top">4dp</dimen>
+    <dimen name="view_age_size">24dp</dimen>
+    <dimen name="img_like_size">16dp</dimen>
+    <dimen name="img_like_margin_all">13dp</dimen>
 </resources>
