--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,44 +1,94 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. --><style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
-    <item name="colorPrimaryDark">@color/colorPrimary</item>
-    <item name="colorPrimary">@color/colorPrimary</item>
+    <!--Button - btn-->
+    <!--EditText - et-->
+    <!--TextView - tv-->
+    <!--ProgressBar - pb-->
+    <!--Checkbox - chk-->
+    <!--RadioButton - rb-->
+    <!--ToggleButton - tb-->
+    <!--Spinner - spn-->
+    <!--Menu - mnu-->
+    <!--ListView - lv-->
+    <!--GalleryView - gv-->
+    <!--LinearLayout -ll-->
+    <!--RelativeLayout - rl--><style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <item name="colorPrimaryDark">@color/color_primary</item>
+    <item name="colorPrimary">@color/color_primary</item>
     <item name="statusBarBackground">@android:color/transparent</item>
-    <item name="materialCardViewStyle">@style/MyCardView</item>
+    <item name="materialCardViewStyle">@style/ListCardView</item>
     <item name="fontFamily">sans-serif</item>
     <item name="android:windowDrawsSystemBarBackgrounds">true</item>
 </style>
 
-    <style name="MyCardView" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="android:windowBackground">@drawable/gradient_bc_itm</item>
+    <style name="ListCardView" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:windowBackground">@drawable/gradient_item_cardview</item>
+    </style>
+
+    <style name="DetailTags">
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:textColor">@color/red</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="DetailViewAge">
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:background">@drawable/age_backview</item>
+    </style>
+
+    <style name="DetailTextAge">
+        <item name="android:textColor">@color/soft_white</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="DetailStars">
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:numStars">5</item>
+        <item name="android:progressBackgroundTint">@color/grey</item>
+        <item name="android:progressDrawable">@drawable/ratingbar_svg_selector</item>
+        <item name="android:progressTint">@color/red</item>
+        <item name="android:rating">0</item>
+        <item name="android:secondaryProgressTint">@color/grey</item>
+        <item name="android:stepSize">1</item>
+        <item name="android:isIndicator">true</item>
+    </style>
+
+    <style name="DetailTextReview">
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="DetailStoryline">
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:text">@string/frdetails_storyline_text</item>
+        <item name="android:textColor">@color/soft_white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="DetailTextOverview">
+        <item name="android:lineSpacingExtra">@dimen/detail_overview_space_extra</item>
+        <item name="android:textAlignment">viewStart</item>
+        <item name="android:textColor">@color/transparent_white</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:fontFamily">@font/roboto_light</item>
+        <item name="android:layout_marginTop">@dimen/detail_overview_margin_top</item>
+    </style>
+
+    <style name="DetailCast">
+        <item name="android:text">@string/details_cast_text</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:textColor">@color/soft_white</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="DetailTextTitle">
-        <item name="android:textColor">@color/clWhite</item>
+        <item name="android:textColor">@color/soft_white</item>
         <item name="android:fontFamily">@font/roboto_black</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">40sp</item>
         <item name="android:textAlignment">viewStart</item>
-    </style>
-
-    <style name="DetailTags"></style>
-
-    <style name="DetailTextOverview">
-        <item name="android:lineSpacingExtra">@dimen/detailOverviewSpaceExtra</item>
-        <item name="android:textAlignment">viewStart</item>
-        <item name="android:textColor">@color/transparentWhite</item>
-        <item name="android:typeface">normal</item>
-        <item name="android:fontFamily">@font/roboto_light</item>
-    </style>
-
-    <style name="DetailTextReview">
-        <item name="android:textColor">@color/clGrey</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="DetailTextAge">
-        <item name="android:textColor">@color/clWhite</item>
-        <item name="android:textSize">12sp</item>
     </style>
 
     <style name="DetailLike">
@@ -52,8 +102,38 @@
     </style>
 
     <style name="DetailTextTags">
-        <item name="android:textColor">@color/clRed</item>
+        <item name="android:textColor">@color/red</item>
         <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="ItemMovieCard">
+        <item name="android:checkable">true</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+    </style>
+
+    <style name="ItemTextReview" parent="DetailTextReview">
+        <item name="android:textSize">8sp</item>
+        <item name="android:layout_marginStart">6dp</item>
+    </style>
+
+    <style name="ItemMovieTags">
+        <item name="android:textColor">@color/red</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">8sp</item>
+    </style>
+
+    <style name="ItemMovieTitle">
+        <item name="android:textColor">@color/soft_white</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:singleLine">false</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textAlignment">viewStart</item>
+    </style>
+
+    <style name="ItemMovieDuration" parent="DetailTextReview">
+        <item name="android:textSize">8sp</item>
     </style>
 
     <style name="ItemsPosterST" parent="">
@@ -62,27 +142,16 @@
         <item name="cornerFamilyTopRight">rounded</item>
     </style>
 
-    <style name="ListsReviews" parent="DetailTextReview">
-        <item name="android:textSize">8sp</item>
+    <style name="ItemActorRoot" parent="">
+        <item name="android:layout_marginStart">4dp</item>
+        <item name="android:layout_marginEnd">4dp</item>
     </style>
 
-    <style name="ListsTags">
-        <item name="android:textColor">@color/clRed</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textSize">8sp</item>
-    </style>
-
-    <style name="ListsTitle">
-        <item name="android:textColor">@color/clWhite</item>
-        <item name="android:textSize">40sp</item>
-        <item name="android:singleLine">false</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:fontFamily">sans-serif</item>
+    <style name="ItemActorActorName" parent="">
         <item name="android:textAlignment">viewStart</item>
-    </style>
-
-    <style name="ItemTitle" parent="ListsTitle">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/actor_name</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ShapeAppearanceOverlay" parent="">
@@ -90,23 +159,16 @@
         <item name="cornerFamily">rounded</item>
     </style>
 
-    <style name="GlassRating">
-        <item name="android:minHeight">10dp</item>
-        <item name="android:minWidth">10dp</item>
-        <item name="colorControlNormal">@color/clRed</item>
-        <item name="colorControlActivated">@color/colorPrimary</item>
-        <item name="android:progressDrawable">@drawable/rating_bar_bg</item>
-    </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
     <style name="AppTheme2" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryDark">@android:color/transparent</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowBackground">@color/colorPrimary</item>
+        <item name="colorAccent">@color/color_accent</item>
+        <item name="android:windowBackground">@color/color_primary</item>
     </style>
 
     <style name="AppTheme2.NoActionBar">
@@ -120,10 +182,5 @@
 
     <style name="TextAppearance.MyApp.Title.Expanded" parent="DetailTextTitle">
         <item name="android:lineSpacingExtra">20sp</item>
-    </style>
-
-    <style name="ItemTextReview" parent="DetailTextReview">
-        <item name="android:textSize">8sp</item>
-        <item name="android:layout_marginStart">6dp</item>
     </style>
 </resources>
