implement listener: (Movie) -> Unit

--- a/app/src/main/res/drawable/gradient_item_cardview.xml
+++ b/app/src/main/res/drawable/gradient_item_cardview.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:centerX="0.3"
         android:centerY="0.3"
-        android:endColor="#191926"
+        android:endColor="@color/color_primary"
         android:gradientRadius="100%"
-        android:startColor="#222232"
+        android:startColor="@color/color_accent"
         android:type="radial"/>
 </shape>
