--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,38 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!--Button - btn-->
-    <!--EditText - et-->
-    <!--TextView - tv-->
-    <!--ProgressBar - pb-->
-    <!--Checkbox - chk-->
-    <!--RadioButton - rb-->
-    <!--ToggleButton - tb-->
-    <!--Spinner - spn-->
-    <!--Menu - mnu-->
-    <!--ListView - lv-->
-    <!--GalleryView - gv-->
-    <!--LinearLayout -ll-->
-    <!--RelativeLayout - rl--><style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
-    <item name="colorPrimaryDark">@color/color_primary</item>
-    <item name="colorPrimary">@color/color_primary</item>
-    <item name="statusBarBackground">@android:color/transparent</item>
-    <item name="materialCardViewStyle">@style/ListCardView</item>
-    <item name="fontFamily">sans-serif</item>
-    <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-</style>
-
     <style name="ListCardView" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:windowBackground">@drawable/gradient_item_cardview</item>
     </style>
 
     <style name="DetailTags">
-        <item name="android:layout_marginTop">4dp</item>
-        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:layout_marginTop">@dimen/all_margin_4dp</item>
+        <item name="android:layout_marginEnd">@dimen/all_margin_8dp</item>
         <item name="android:textColor">@color/red</item>
         <item name="android:textSize">14sp</item>
     </style>
 
     <style name="DetailViewAge">
-        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginTop">@dimen/all_margin_4dp</item>
         <item name="android:background">@drawable/age_backview</item>
     </style>
 
@@ -42,10 +21,10 @@
     </style>
 
     <style name="DetailStars">
-        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginTop">@dimen/all_margin_8dp</item>
         <item name="android:numStars">5</item>
         <item name="android:progressBackgroundTint">@color/grey</item>
-        <item name="android:progressDrawable">@drawable/ratingbar_svg_selector</item>
+        <item name="android:progressDrawable">@drawable/rating_bar_bg</item>
         <item name="android:progressTint">@color/red</item>
         <item name="android:rating">0</item>
         <item name="android:secondaryProgressTint">@color/grey</item>
@@ -61,14 +40,14 @@
     </style>
 
     <style name="DetailStoryline">
-        <item name="android:layout_marginTop">24dp</item>
-        <item name="android:text">@string/frdetails_storyline_text</item>
+        <item name="android:layout_marginTop">@dimen/details_margintop</item>
+        <item name="android:text">@string/details_storyline_text</item>
         <item name="android:textColor">@color/soft_white</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="DetailTextOverview">
-        <item name="android:lineSpacingExtra">@dimen/detail_overview_space_extra</item>
+        <item name="android:lineSpacingExtra">@dimen/details_overview_space_extra</item>
         <item name="android:textAlignment">viewStart</item>
         <item name="android:textColor">@color/transparent_white</item>
         <item name="android:typeface">normal</item>
@@ -78,7 +57,7 @@
 
     <style name="DetailCast">
         <item name="android:text">@string/details_cast_text</item>
-        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_marginTop">@dimen/details_margintop</item>
         <item name="android:textColor">@color/soft_white</item>
         <item name="android:textStyle">bold</item>
     </style>
@@ -87,7 +66,7 @@
         <item name="android:textColor">@color/soft_white</item>
         <item name="android:fontFamily">@font/roboto_black</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">40sp</item>
+        <item name="android:textSize">@dimen/details_title</item>
         <item name="android:textAlignment">viewStart</item>
     </style>
 
@@ -121,6 +100,7 @@
         <item name="android:textColor">@color/red</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textSize">8sp</item>
+        <item name="android:maxLines">2</item>
     </style>
 
     <style name="ItemMovieTitle">
@@ -164,14 +144,14 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
-    <style name="AppTheme2" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryDark">@android:color/transparent</item>
         <item name="colorAccent">@color/color_accent</item>
         <item name="android:windowBackground">@color/color_primary</item>
     </style>
 
-    <style name="AppTheme2.NoActionBar">
+    <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
